@@ -4,6 +4,9 @@ Changes
 2.5.6 (unreleased)
 ------------------
 
+* Use TextAreaWidget for the newsletter template body.
+  [timo]
+  
 * Fix/refactor/rewrite CSV import.
   [timo]
 
